temporary, start refactoring, make components easier to theme

--- a/src/olympia/devhub/templates/devhub/new-landing/components/navigation.html
+++ b/src/olympia/devhub/templates/devhub/new-landing/components/navigation.html
@@ -1,4 +1,4 @@
-<nav class="DevHub-Navigation {% if user_authenticated %}DevHub-Navigation--signedin{% endif %}">
+<nav class="DevHub-Navigation content {% if user_authenticated %}scheme-light{% else %}scheme-medium{% endif %}">
   <ul>
     <li>
       <a href="#" class="Logo {% if user_authenticated %}Logo--secondary{% endif %}">
