--- a/src/olympia/devhub/templates/devhub/new-landing/components/overview.html
+++ b/src/olympia/devhub/templates/devhub/new-landing/components/overview.html
@@ -1,4 +1,4 @@
-<section class="DevHub-Header">
+<section class="DevHub-Overview">
   <h1>{{ _('Customize Your Firefox') }}</h1>
   <p>
     {% trans %}
