--- a/static/css/devhub/base.less
+++ b/static/css/devhub/base.less
@@ -1,32 +1,45 @@
 @import '../common/normalize.css';
 @import '../impala/fonts/fira/fira.less';
 
-// Colors
-@primary-font: 'Fira Sans', sans-serif;
-@primary-font-color: #fff;
-@secondary-font-color: #333;
-@tertiary-font-color: #40d38d;
-
-@button-border: #979797;
-@primary-button-background: #29c978;
-
-@primary-section-background: #0568ba;
-@secondary-section-background: #f3f5f8;
-@tertiary-section-background: #1d3770;
-
+// Grid
+@grid-max: 940px;
 @phone-large: ~"only screen and (min-width: 428px)";
 @phone: ~"only screen and (max-width: 768px)";
 @tablet: ~"only screen and (min-width: 768px)";
 @desktop: ~"only screen and (min-width: 1024px)";
 
+// Fonts
+@font-primary: 'Fira Sans', sans-serif;
+
+// Colors
+@color-text: #333;
+@color-items: #fff;
+@color-background: #fff;
+
+// Color Schemes
+// Light
+@color-scheme-light-text: #333;
+@color-scheme-light-background: #f1f3f6;
+
+// Medium
+@color-scheme-medium-text: #fff;
+@color-scheme-medium-background: #0568ba;
+@color-scheme-medium-items: #29c978;
+
+// Dark
+@color-scheme-dark-text: #fff;
+@color-scheme-dark-background: #1d3770;
+
 // Common styles
 * {
-  font-family: @primary-font;
+  font-family: @font-primary;
 }
 
 body {
   margin: 0;
   padding: 0;
+  display: flex;
+  flex-flow: column;
 }
 
 h1 {
@@ -46,8 +59,7 @@ section {
   }
 }
 
-// Utilities
-
+// Mixins / Utilities
 .show-on-desktop {
   display: none;
 
@@ -62,21 +74,43 @@ section {
   }
 }
 
-// Components
+.content {
+  width: 100%;
+  color: @color-text;
+  background-color: @color-background;
+}
 
+.scheme-light {
+  &:extend(.content);
+  background-color: @color-scheme-light-background;
+  color: @color-scheme-light-text;
+}
+
+.scheme-medium {
+  &:extend(.content);
+  background-color: @color-scheme-medium-background;
+  color: @color-scheme-medium-text;
+}
+
+.scheme-dark {
+  &:extend(.content);
+  background-color: @color-scheme-dark-background;
+  color: @color-scheme-dark-text;
+}
+
+// Components
 .Button {
   border-radius: 2px;
-  border: 1px @button-border;
   box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.3);
-  color: @primary-font-color;
+  color: @color-items;
   display: inline-block;
   padding: 10px 30px;
   text-align: center;
   text-decoration: none;
-}
 
-.Button--primary {
-  background-color: @primary-button-background;
+  .scheme-medium & {
+    background-color: @color-scheme-medium-items;
+  }
 }
 
 .Logo {
@@ -100,15 +134,14 @@ section {
       margin-left: 10px;
     }
   }
-}
 
-.Logo--secondary::before {
-  background: url('../../img/developers/addons-logo-black.svg') no-repeat left center;
-  background-size: contain;
+  .scheme-medium & {
+    background: url('../../img/developers/addons-logo-black.svg') no-repeat left center;
+    background-size: contain;
+  }
 }
 
 .DevHub-Navigation {
-  background-color: @primary-section-background;
   padding: 0 20px 20px;
 
   ul {
@@ -134,23 +167,6 @@ section {
           margin-left: 60px;
         }
       }
-    }
-
-    a {
-      color: @primary-font-color;
-      text-decoration: none;
-    }
-  }
-}
-
-.DevHub-Navigation--signedin {
-  background-color: @secondary-section-background;
-
-  ul {
-    li {
-      a {
-        color: @secondary-font-color;
-      }
 
       &.avatar {
         display: none;
@@ -164,75 +180,113 @@ section {
           border-radius: 50%;
         }
       }
-    }
-  }
-}
 
-.DevHub-Content {
-  display: flex;
-  flex-flow: row wrap;
-}
-
-.DevHub-Header {
-  background-color: @primary-section-background;
-  flex: 1 100%;
-
-  @media @phone-large {
-    text-align: center;
-  }
-
-  h1,
-  p {
-    color: @primary-font-color;
-  }
-
-  p {
-    font-weight: 300;
-    font-size: 24px;
-    margin: 20px auto;
-    max-width: 560px;
-
-    > a {
-      color: @primary-font-color;
-    }
-
-    @media @phone {
-      font-size: 20px;
-    }
-  }
-}
-
-.DevHub-BlogPosts {
-  background-color: @tertiary-section-background;
-  color: @primary-font-color;
-  flex: 1 100%;
-
-  h2 a {
-    color: @primary-font-color;
-    text-decoration: none;
-    font-size: 32px;
-    font-weight: 500;
-  }
-
-  ul {
-    list-style: none;
-    padding: 0;
-
-    li {
       a {
-        color: @tertiary-font-color;
+        color: @color-text;
         text-decoration: none;
-      }
 
-      p {
-        margin-top: 0;
+        .scheme-light & {
+          color: @color-scheme-light-text
+        }
       }
     }
   }
-
-  .read-more {
-    text-decoration: none;
-    color: @tertiary-font-color;
-    font-weight: 600;
-  }
 }
+
+// .DevHub-Overview {
+//   background-color: @primary-section-background;
+
+//   @media @phone-large {
+//     text-align: center;
+//   }
+
+//   h1,
+//   p {
+//     color: @primary-font-color;
+//   }
+
+//   p {
+//     font-weight: 300;
+//     font-size: 24px;
+//     margin: 20px auto;
+//     max-width: 560px;
+
+//     > a {
+//       color: @primary-font-color;
+//     }
+
+//     @media @phone {
+//       font-size: 20px;
+//     }
+//   }
+// }
+
+// .DevHub-MoreInformation {
+//   display: flex;
+//   flex-flow: row nowrap;
+//   background-color: @tertiary-section-background;
+//   color: @primary-font-color;
+//   padding: 0 10% 20px 10%;
+
+
+//   display: flex;
+//   flex-flow: row nowrap;
+//   background-color: #1d3770;
+//   color: #fff;
+//   padding: 0 10% 20px 10%;
+//   align-items: center;
+//   justify-content: center;
+//   justify-content: space-around;
+//   padding: 10%;
+
+// }
+
+// .DevHub-BlogPosts,
+// .DevHub-Tools {
+//   flex: 1 100%;
+//   line-height: 1.5;
+
+//   h2,
+//   h2 a {
+//     color: @primary-font-color;
+//     text-decoration: none;
+//     font-weight: 500;
+//     font-size: 32px;
+//     margin: 0;
+//   }
+
+//   ul {
+//     list-style: none;
+//     padding: 0;
+
+//     li {
+//       a {
+//         color: @tertiary-font-color;
+//         text-decoration: none;
+//       }
+
+//       p {
+//         margin-top: 0;
+//       }
+//     }
+//   }
+// }
+
+// .DevHub-BlogPosts {
+//   .read-more {
+//     text-decoration: none;
+//     color: @tertiary-font-color;
+//     font-weight: 600;
+//   }
+// }
+
+// .DevHub-Tools {
+//   ul {
+//     li {
+//       a {
+//         font-size: 24px;
+//         font-weight: 600;
+//       }
+//     }
+//   }
+// }
