--- a/src/olympia/devhub/templates/devhub/new-landing/components/blog_posts.html
+++ b/src/olympia/devhub/templates/devhub/new-landing/components/blog_posts.html
@@ -4,19 +4,21 @@
       {{ _('Latest News') }}
     </a>
   </h2>
-  <ul>
-    {% for post in blog_posts %}
-      <li>
-        <a class="DevHub-BlogPosts-postTitle" href="{{ post.permalink }}">{{ post.title }}</a>
+  {% if blog_posts.exists() %}
+    <ul>
+      {% for post in blog_posts %}
+        <li>
+          <a class="DevHub-BlogPosts-postTitle" href="{{ post.permalink }}">{{ post.title }}</a>
 
-        <p class="meta">
-          <time datetime="{{ post.date_posted }}">
-            {{ post.date_posted|timesince }}
-          </time>
-        </p>
-      </li>
-    {% endfor %}
-  </ul>
+          <p class="meta">
+            <time datetime="{{ post.date_posted }}">
+              {{ post.date_posted|timesince }}
+            </time>
+          </p>
+        </li>
+      {% endfor %}
+    </ul>
+  {% endif %}
 
   <a class="read-more" href="https://blog.mozilla.com/addons/">
     {{ _('Read more in our Blog') }}
