Finish refactor, make blog posts / tools section work again.

--- a/src/olympia/devhub/templates/devhub/new-landing/components/blog_posts.html
+++ b/src/olympia/devhub/templates/devhub/new-landing/components/blog_posts.html
@@ -1,4 +1,4 @@
-<section class="DevHub-BlogPosts">
+<section class="DevHub-BlogPosts content scheme-dark">
   <h2>
     <a title="{{ _('Subscribe to this feed') }}" href="https://blog.mozilla.com/addons/feed/">
       {{ _('Latest News') }}
